refactor simply